# TestMPI

./: CMakeCache.txt  CMakeLists.txt  Makefile  TestMPI  TestMPI.cbp  app.cc  cmake_install.cmake  kernel.h  main.cpp
